@@ -35,9 +35,7 @@ AM_GLIB_GNU_GETTEXT
 
 # ****
 
-AC_SUBST(DLOPEN)
-AC_SUBST(DLPREOPEN)
-
+AC_PATH_PROG(GCONFTOOL, gconftool-2)
 AM_GCONF_SOURCE_2
 
 PKG_CHECK_MODULES(LIBGSM, glib-2.0 gobject-2.0 $GNOKII_REQS gthread-2.0)
