@@ -1,0 +1,98 @@
+<gconfschemafile>
+    <schemalist>    
+
+      <schema>
+        <key>/schemas/apps/gnome-phone-manager/connection_type</key>
+	<applyto>/apps/gnome-phone-manager/connection_type</applyto>
+	<owner>gnome-phone-manager</owner>
+	<type>int</type>
+	<default>0</default>
+	<locale name="C">
+	  <short>The connection type used by gnome-phone-manager</short>
+	  <long>
+	    The connection type used by gnome-phone-manager:
+	    Bluetooth is 0
+	    Serial 1 is 1
+	    Serial 2 is 2
+	    IrDa is 3
+	    Other connection types are 4
+	  </long>
+	</locale>
+      </schema>
+
+      <schema>
+        <key>/schemas/apps/gnome-phone-manager/bluetooth_addr</key>
+	<applyto>/apps/gnome-phone-manager/bluetooth_addr</applyto>
+	<owner>gnome-phone-manager</owner>
+	<type>string</type>
+	<default></default>
+	<locale name="C">
+	  <short>Bluetooth address of the device to connect to</short>
+	  <long>
+	    Bluetooth address of the device to connect to. Requires
+	    connection_type to be 1 to be used.
+	  </long>
+	</locale>
+      </schema>
+
+      <schema>
+        <key>/schemas/apps/gnome-phone-manager/other_serial</key>
+	<applyto>/apps/gnome-phone-manager/other_serial</applyto>
+	<owner>gnome-phone-manager</owner>
+	<type>string</type>
+	<default></default>
+	<locale name="C">
+	  <short>The device node for the serial device to connect to</short>
+	  <long>
+	    The device node for the serial device to connect to. Requires
+	    connection_type to be 4 to be used.
+	  </long>
+	</locale>
+      </schema>
+
+      <schema>
+        <key>/schemas/apps/gnome-phone-manager/auto_retry</key>
+	<applyto>/apps/gnome-phone-manager/auto_retry</applyto>
+	<owner>gnome-phone-manager</owner>
+	<type>bool</type>
+	<default>true</default>
+	<locale name="C">
+	  <short>Whether to retry connecting to the mobile phone</short>
+	  <long>
+	    Whether to retry connecting to the mobile phone if the connection
+	    fails at some point.
+	  </long>
+	</locale>
+      </schema>
+
+      <schema>
+        <key>/schemas/apps/gnome-phone-manager/popup_messages</key>
+	<applyto>/apps/gnome-phone-manager/popup_messages</applyto>
+	<owner>gnome-phone-manager</owner>
+	<type>bool</type>
+	<default>false</default>
+	<locale name="C">
+	  <short>Whether to popup new messages on the desktop</short>
+	  <long>
+	    Whether to popup new messages on the desktop as soon as they're
+	    received, as opposed to showing them when clicking on the tray icon.
+	  </long>
+	</locale>
+      </schema>
+
+      <schema>
+        <key>/schemas/apps/gnome-phone-manager/sound_alert</key>
+	<applyto>/apps/gnome-phone-manager/sound_alert</applyto>
+	<owner>gnome-phone-manager</owner>
+	<type>bool</type>
+	<default>true</default>
+	<locale name="C">
+	  <short>Whether to play a sound alert when a new message comes in</short>
+	  <long>
+	    Whether to play a sound alert when a new message comes in.
+	  </long>
+	</locale>
+      </schema>
+
+  </schemalist>
+</gconfschemafile>
